dev/virtualservice.yml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: hello-vs
  namespace: hello-app
spec:
  gateways:
    - gateway-internal
  hosts:
    - testapp.cloudautomate.in
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: raja.hello-app.svc.cluster.local
        port:
          number: 8080
